Fix parsing of directories listing on a specific ftp server

Directories listing on ftp servers like ftp://ftp-dee.poliba.it/ are now parsed correctly.

BUG: 375610
REVIEW: 129905
FIXED-IN: 5.31